--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.15.1",
     "ng2-bootstrap": "^1.1.5",
     "rxjs": "5.0.0-beta.12",
+    "underscore": "^1.8.3",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
